# esp32_to_sfs

./: .gitmodules  README.md  sdkconfig
components/libcsp/: CMakeLists.txt
main/: CMakeLists.txt  client-socket.txt  csp_server_client.c  csp_server_client_freertos.c  hello_world_main.c  hello_world_main.txt
